...
) {
    val coroutineScope = rememberCoroutineScope()

    MjuScaffold(
        modifier = modifier
            .fillMaxSize()
            .testTag("home_screen"),
        showMenu = true,
        menuItemSelected = Screens.Home,
        onMenuItemSelected = { destination ->
            coroutineScope.launch {
                onBottomBarItemSelected(destination)
            }
        },
        floatingActionButton = {
            ExtendedFloatingActionButton(
                modifier = Modifier
                    .padding(Theme.spacing.medium)
                    .testTag("home_fab"),
                onClick = { onSetupBlankPoll() },
                icon = { Icon(Icons.Filled.Add, null) },
                text = { Text(stringResource(R.string.button_new_poll)) },
            )
        }
    ) { innerPadding ->
...
