...
    <string name="grade_great_enthusiasm" translatable="false">😀</string>
    <string name="grade_elation" translatable="false">😍</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="button_add">Add</string>
    <string name="button_finish">Finish</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip</string>
    <string name="button_let_s_go">Let\'s go !</string>
    <string name="button_new_poll">New Poll</string>
    <string name="button_next_participant">Next participant</string>
    <string name="button_end_the_poll">End the Poll</string>
    <string name="button_back">Back</string>
...
