...
    var finishButtonVisibility by remember { mutableStateOf(true) }
    val coroutineScope = rememberCoroutineScope()

    MjuScaffold(
        modifier = Modifier
            .fillMaxSize()
            .testTag("setup_screen"),
        snackbarHost = {
            MjuSnackbarWithStringResId(
                modifier = Modifier,
                textId = pollSetupState.feedback,
                onDismiss = { onDismissFeedback() },
            )
...
