...
        onFinish()
    }

    Scaffold(
        modifier = modifier
            .fillMaxSize()
            .testTag("onboarding_screen"),
    ) { innerPadding ->
        val pagerState = rememberPagerState(pageCount = { onBoardingPages.size })

        LaunchedEffect(
            pagerState.isScrollInProgress,
        ) {
...
